// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots atoms|Label with some emoji 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#eee",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "2",
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "0px 5px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingBottom": 0,
            "paddingTop": 0,
          }
        }
      >
        <h1
          style={
            Object {
              "display": "inline",
              "fontSize": "25px",
              "margin": 0,
              "marginRight": "20px",
              "padding": 0,
            }
          }
        >
          atoms|Label
        </h1>
        <h2
          style={
            Object {
              "color": "#999",
              "display": "inline",
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with some emoji
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <label>
      <span
        aria-label="so cool"
        role="img"
      >
        😀 😎 👍 💯
      </span>
    </label>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#eee",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "2",
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "0px 5px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h3
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            Label
            " Component
          </h3>
          <small>
            No propTypes defined!
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots atoms|MaterialButton no text 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#eee",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "2",
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "0px 5px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingBottom": 0,
            "paddingTop": 0,
          }
        }
      >
        <h1
          style={
            Object {
              "display": "inline",
              "fontSize": "25px",
              "margin": 0,
              "marginRight": "20px",
              "padding": 0,
            }
          }
        >
          atoms|MaterialButton
        </h1>
        <h2
          style={
            Object {
              "color": "#999",
              "display": "inline",
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          no text
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <button
      className="MuiButtonBase-root-135 MuiButton-root-109 MuiButton-text-111 MuiButton-flat-114"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-110"
      />
      <span
        className="MuiTouchRipple-root-138"
      />
    </button>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#eee",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "2",
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "0px 5px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h3
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            MaterialButton
            " Component
          </h3>
          <small>
            No propTypes defined!
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots atoms|MaterialButton with child component and text 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#eee",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "2",
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "0px 5px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingBottom": 0,
            "paddingTop": 0,
          }
        }
      >
        <h1
          style={
            Object {
              "display": "inline",
              "fontSize": "25px",
              "margin": 0,
              "marginRight": "20px",
              "padding": 0,
            }
          }
        >
          atoms|MaterialButton
        </h1>
        <h2
          style={
            Object {
              "color": "#999",
              "display": "inline",
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with child component and text
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <button
      className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-2"
      >
        <span>
          Material Button
        </span>
      </span>
      <span
        className="MuiTouchRipple-root-30"
      />
    </button>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#eee",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "2",
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "0px 5px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h3
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            MaterialButton
            " Component
          </h3>
          <small>
            No propTypes defined!
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots atoms|MaterialButton with some emoji 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#eee",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "2",
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "0px 5px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingBottom": 0,
            "paddingTop": 0,
          }
        }
      >
        <h1
          style={
            Object {
              "display": "inline",
              "fontSize": "25px",
              "margin": 0,
              "marginRight": "20px",
              "padding": 0,
            }
          }
        >
          atoms|MaterialButton
        </h1>
        <h2
          style={
            Object {
              "color": "#999",
              "display": "inline",
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with some emoji
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <button
      className="MuiButtonBase-root-63 MuiButton-root-37 MuiButton-text-39 MuiButton-flat-42"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-38"
      >
        <span
          aria-label="so cool"
          role="img"
        >
          😀 😎 👍 💯
        </span>
      </span>
      <span
        className="MuiTouchRipple-root-66"
      />
    </button>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#eee",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "2",
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "0px 5px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h3
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            MaterialButton
            " Component
          </h3>
          <small>
            No propTypes defined!
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots atoms|MaterialButton with text 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#eee",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "2",
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "0px 5px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingBottom": 0,
            "paddingTop": 0,
          }
        }
      >
        <h1
          style={
            Object {
              "display": "inline",
              "fontSize": "25px",
              "margin": 0,
              "marginRight": "20px",
              "padding": 0,
            }
          }
        >
          atoms|MaterialButton
        </h1>
        <h2
          style={
            Object {
              "color": "#999",
              "display": "inline",
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with text
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <button
      className="MuiButtonBase-root-99 MuiButton-root-73 MuiButton-text-75 MuiButton-flat-78"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-74"
      >
        Material Button
      </span>
      <span
        className="MuiTouchRipple-root-102"
      />
    </button>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#eee",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": "2",
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "0px 5px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h3
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            MaterialButton
            " Component
          </h3>
          <small>
            No propTypes defined!
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;
